[tool.poetry]
name = "icd_predict"
version = "0.1.0"
description = "This is a pipline for predicting icd10 codes form fhir resources"
authors = ["Giulia Baldini, Merlin Engelke"]

[tool.poetry.dependencies]
python = "^3.9"
app = "^0.0.1"
fhir = "^0.0.4"
"fhir.resources" = "^7.0.0"
fhir-pyrate = "0.2.0b6"
holidays = "^0.23"
numpy = "^1.24.2"
requests = "^2.28.2"
schedule = "^1.2.0"
tqdm = "^4.65.0"
wandb = "^0.14.2"
colorlog = "^6.7.0"
pyarrow = "^11.0.0"
pytz = "^2023.3"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
"ruamel.yaml" = "^0.17.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
