[tool.poetry]
name = "FHIRformer"
readme = "README.md"
version = "0.1.0"
license = "MIT License"
description = "A transformer-based model for FHIR data"
authors = ["Merlin Engelke <Merlin.Engelke@uk-essen.de>", "Giulia Baldini <Giulia.Baldini@uk-essen.de>"]

[tool.poetry.scripts]
fhirformer = 'fhirformer.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
fhir-pyrate = {git = "https://github.com/UMEssen/FHIR-PYrate.git", branch = "main"}
scikit-learn = "^1.3.0"
transformers = {extras = ["torch"], version = "^4.33.0"}
wandb = "^0.15.8"
torch = ">=2.0.0, !=2.0.1"
datasets = "^2.14.4"
sqlalchemy = "^2.0.20"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
ipykernel = "^6.25.2"
direnv = "^2020.12.3"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.isort]
profile = "black"
line_length = 88
